# cpp_stream

./: CMakePresets.json  README.org
app/: jamfile  main.cpp
lib/: CMakeLists.txt  jamfile
lib/lib/: boost.test.hpp  lib.hpp  lib.pbt.cpp  lib.test.cpp  utils.test.hpp
